# PhysicsEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  ball.hpp  dependencies.txt  main.cpp  solver.hpp  user.cpp
.github/workflows/: super-linter.yml
SFML/include/SFML/: Audio.hpp  Config.hpp  GpuPreference.hpp  Graphics.hpp  Main.hpp  Network.hpp  OpenGL.hpp  System.hpp  Window.hpp
SFML/include/SFML/Audio/: AlResource.hpp  Export.hpp  InputSoundFile.hpp  Listener.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileFactory.inl  SoundFileReader.hpp  SoundFileWriter.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
SFML/include/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  Color.inl  ConvexShape.hpp  Drawable.hpp  Export.hpp  Font.hpp  Glsl.hpp  Glsl.inl  Glyph.hpp  Image.hpp  PrimitiveType.hpp  Rect.hpp  Rect.inl  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Transform.inl  Transformable.hpp  Vertex.hpp  Vertex.inl  VertexArray.hpp  VertexBuffer.hpp  View.hpp
SFML/include/SFML/Network/: Export.hpp  Ftp.hpp  Http.hpp  IpAddress.hpp  (+7 more)
lib/: CMakeLists.txt
lib/ball/: CMakeLists.txt  ball.cpp  ball.hpp
lib/solver/: CMakeLists.txt  solver.cpp  solver.hpp
lib/user/: CMakeLists.txt  user.cpp  user.hpp
mingw64/lib/python3.9/: _sysconfigdata__win32_.py
source/: Makefile  ball.cpp  main.cpp  solver.cpp  user.cpp
source/include/: ball.hpp  solver.hpp  user.hpp
(+61 files in other folders)
